--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -11,7 +11,7 @@
     {% set contact = translations.contact %}
     <h1 class="heading mt-0 text-center">{{ contact.title }}</h1>
     <hr class="mb-0">
-<!--    location details-->
+    <!--    location details-->
     <div class="container mt-5">
         <div class="row">
             <div class="row">
@@ -39,18 +39,16 @@
                                 <i class="bi bi-geo-alt-fill"></i></span>
                             <span class="d-block cookie-text">({{ location.cookie_disclaimer }})</span>
                         </button>
-                        <a href="https://mapy.cz/s/dodegamezo" target="_blank" id="open-new-window-button" class="btn btn-outline-purple mt-2">
+                        <a href="https://mapy.cz/s/dodegamezo" target="_blank" id="open-new-window-button"
+                           class="btn btn-outline-purple mt-2">
                             <span class="d-block map-button-text">
                                {{ location.map_button_text }} <i class="bi bi-box-arrow-up-right"></i>
                             </span>
                         </a>
                     </div>
 
-                    <!-- iFrame container, hidden initially -->
-                    <div id="map-iframe-container" class="large-contact-content flex-grow-1 d-none">
-                        <iframe id="map-iframe" class="flex-grow-1" style="border:none;width:100%;height:400px;"
-                                src="https://en.frame.mapy.cz/s/casumubehu" frameborder="0"></iframe>
-                    </div>
+                    <!-- Placeholder for iframe, initially empty -->
+                    <div id="iframe-container" class="large-contact-content flex-grow-1 d-none"></div>
                 </div>
             </div>
             <!-- Display button for small screens -->
